# fastem

./: .gitignore  CMakeLists.txt  INSTALL.md  cmake-compile-local-default.sh
Clust/: CentroidRepair.cpp  CentroidRepair.h  CentroidVector.cpp  CentroidVector.h  KMAlgorithm.cpp  KMAlgorithm.h  KMeansInitializer.cpp  KMeansInitializer.h  KMeansOrOrInitializer.cpp  KMeansOrOrInitializer.h  KMeansReportWriter.cpp  KMeansReportWriter.h  OpenMPKMAReducer.cpp  OpenMPKMAReducer.h
Clust/KMeansWithoutMSE/: KMeansWithoutMSE.cpp  KMeansWithoutMSE.h
Clust/PlusPlusInitializer/: PlusPlusInitializer.cpp  PlusPlusInitializer.h
EM2/: BlockManager.cpp  BlockManager.h  CachedEM.cpp  CachedEM.h  EMAlgorithm.cpp  EMAlgorithm.h  EMArgs.cpp  EMArgs.h  EMException.cpp  EMException.h  EMInitializer.cpp  EMInitializer.h  GaussianMixture.cpp  GaussianMixture.h  MatrixEM.cpp  MatrixEM.h  NormalDensity.cpp  NormalDensity.h  OpenMPEMReducer.cpp  OpenMPEMReducer.h  eminit.cpp  main.cpp
MPIEM2/: MPICachedEM.cpp  MPICachedEM.h  MPIJainEMInitializer.cpp  MPIJainEMInitializer.h  MPIMatrixEM.cpp  MPIMatrixEM.h  MPIUniversalReducer.h  main.cpp
MPIKmeans/: DistributedMultithreadedDataset.cpp  DistributedMultithreadedDataset.h  MPIRank0StdOut.cpp  MPIRank0StdOut.h  MPIUtils.h
Util/: Array.cpp  Array.h  Compiler.cpp  Compiler.h  Debug.cpp  Debug.h  EigenUtil.cpp  EigenUtil.h  FileException.h  ITAC.h  LargeMatrix.h  LargeVector.h  MPIThreadAffinityInfo.cpp  MPIThreadAffinityInfo.h  Makefile  Matrix.h  MultithreadedDataset.cpp  MultithreadedDataset.h  NumaAlloc.cpp  NumaAlloc.h  OMPReducer.h  OpenMP.h  Optfloat.h  PrecisionTimer.cpp  PrecisionTimer.h  Profiler.cpp  Profiler.h  Rand.cpp  Rand.h  StdOut.cpp  StdOut.h  ThreadAffinityInfo.cpp  ThreadAffinityInfo.h
